tests/machine/x/kotlin/group_items_iteration.error
line 38:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/group_items_iteration.kt:38:11: error: type inference failed: Not enough information to infer parameter T in inline fun <T> mutableListOf(): MutableList<T>
Please specify it explicitly.

var tmp = mutableListOf()
          ^
/workspace/mochi/tests/machine/x/kotlin/group_items_iteration.kt:52:21: error: type mismatch: inferred type is Double but Int was expected
            total = toDouble(total) + toDouble((x as MutableMap<*, *>)["val"])
                    ^

 37: 
 38: var tmp = mutableListOf()
 39: 
